--- a/RestaurantProjectMVC/Web.config
+++ b/RestaurantProjectMVC/Web.config
@@ -9,7 +9,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="RestaurantDb" providerName="System.Data.SqlClient" connectionString="Data Source=matthewmageedb.c3lw3rud6xel.us-east-2.rds.amazonaws.com,1433;Initial Catalog=RestaurantProject1;User Id=sqladmin;password=password123" />
+    <add name="RestaurantDb" providerName="System.Data.SqlClient" connectionString="Data Source=matthewmageedb.c3lw3rud6xel.us-east-2.rds.amazonaws.com,1433;Initial Catalog=RestaurantProject1;MultipleActiveResultSets=true;User Id=sqladmin;password=password123" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
