--- a/RestaurantProjectMVC/RestaurantProjectMVC.csproj
+++ b/RestaurantProjectMVC/RestaurantProjectMVC.csproj
@@ -148,6 +148,8 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Controllers\RestaurantsController.cs" />
     <Compile Include="Controllers\ReviewsController.cs" />
+    <Compile Include="Data\IRestaurantRepository.cs" />
+    <Compile Include="Data\RestaurantRepository.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
