--- a/RestaurantProjectMVC/Web.config
+++ b/RestaurantProjectMVC/Web.config
@@ -7,6 +7,7 @@
   <configSections>
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+    <section name="nlog" type="NLog.Config.ConfigSectionHandler, NLog"/>
   </configSections>
   <connectionStrings>
     <add name="RestaurantDb" providerName="System.Data.SqlClient" connectionString="Data Source=matthewmageedb.c3lw3rud6xel.us-east-2.rds.amazonaws.com,1433;Initial Catalog=RestaurantProject1;MultipleActiveResultSets=true;User Id=sqladmin;password=password123" />
@@ -53,4 +54,17 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
+  <nlog xmlns="http://www.nlog-project.org/schemas/NLog.xsd" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+    <targets>
+      <target name="default" xsi:type="File"
+      fileName="logs/app-log.txt"
+      archiveFileName="logs/archives/app-log.{#}.txt"
+      archiveEvery="Day"
+      archiveNumbering="Rolling"
+      maxArchiveFiles="7" />
+    </targets>
+    <rules>
+      <logger name="*" writeTo="default" />
+    </rules>
+  </nlog>
 </configuration>
