--- a/RestaurantProjectMVC/packages.config
+++ b/RestaurantProjectMVC/packages.config
@@ -12,6 +12,7 @@
   <package id="Microsoft.Net.Compilers" version="2.4.0" targetFramework="net461" developmentDependency="true" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net461" />
   <package id="Modernizr" version="2.6.2" targetFramework="net461" />
+  <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net461" />
   <package id="NLog" version="4.5.3" targetFramework="net461" />
   <package id="NLog.Config" version="4.5.3" targetFramework="net461" />
   <package id="NLog.Schema" version="4.5.3" targetFramework="net461" />
